# DC-project

./: LICENSE  README.md
MicroSD/: config_manufacturer.json  config_user.json  data.txt
MicroSD/certs/: mosquitto.crt
Source/: CMakeLists.txt  README.md  build_output.txt  sdkconfig  sdkconfig.old
Source/components/components/Driver-ST7735-ESP32-C6-main/components/st7735_driver/include/: st7735.h
Source/components/components/Driver-ST7735-ESP32-C6-main/components/st7735_driver/src/: st7735.c
Source/components/components/Driver-ST7735-ESP32-C6-main/main/: main.c
Source/main/: CMakeLists.txt
Source/main/brightness/: CMakeLists.txt  task_brightness.c  task_brightness.h
Source/main/button/: CMakeLists.txt  task_button.c  task_button.h
Source/main/config/: CMakeLists.txt  config_manager.c  config_manager.h  config_runtime.c  config_runtime.h  task_config.c  task_config.h
Source/main/core/: CMakeLists.txt  led.c  led.h  logging.c  logging.h  main.c  system_status.c  system_status.h
Source/main/display/: CMakeLists.txt  display.c  display.h  task_button_screen.c  task_button_screen.h  task_display.c
Source/main/include/: board_pins.h
Source/main/security/: CMakeLists.txt  security_aes.c  security_aes.h  security_hmac.c  security_hmac.h
Source/main/sensor/: CMakeLists.txt  sensor_data_store.c  sensor_data_store.h  sensor_dht20.c  sensor_dht20.h  task_sensor.c  task_sensor.h
Source/main/server/: CMakeLists.txt  config_portal_server.c  config_portal_server.h  dns_server.c  dns_server.h  https_server_app.c  https_server_app.h
Source/main/server/certs/: prvtkey.pem
Source/main/server/html/: config_portal.html  index.html
Source/main/wifi/: CMakeLists.txt  mqtt_utils.c  mqtt_utils.h  task_mqtt.c  task_mqtt.h
